# NicheLibrary

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  STYLE_GUIDE.md  compile_flags.txt  pyproject.toml
.competitive-verifier/: config.toml
example/: deque.hpp
geometry/: line-convex-polygon-intersection.hpp
internal/: int128.hpp
other/: enumerate-maximum-independent-set-path-sums.hpp  minimum-mod-range-increment-decrement-operations.hpp  rectangle-add-max-get.hpp
verify/: aoj-1397.test.cpp  aoj-cgl-4-c.test.cpp  example-hello-world.test.cpp  example-yosupo-deque.test.cpp  standalone-01-on-tree.test.cpp  standalone-determinant-of-linear-matrix-polynomial.test.cpp  standalone-dynamic-matrix-rank.test.cpp  standalone-dynamic-median.test.cpp  standalone-enumerate-maximum-independent-set-path-sums.test.cpp  standalone-floor-sum.test.cpp  standalone-generalized-floor-sum-degree-le-2.test.cpp  standalone-generalized-floor-sum-pq-le-2.test.cpp  standalone-generalized-garner.test.cpp  standalone-graph-isomorphism.test.cpp  standalone-hl-rec-dp.test.cpp  standalone-int128.test.cpp  standalone-line-convex-polygon-intersection.test.cpp  standalone-minimum-mod-range-increment-decrement-operations.test.cpp  standalone-online-binomial-sum.test.cpp  standalone-prime-counting-modulo.test.cpp  standalone-rectangle-add-max-get.test.cpp  yosupo-area-of-union-of-rectangles.test.cpp  yosupo-characteristic-polynomial.test.cpp  yosupo-counting-primes.test.cpp  yosupo-many-aplusb-128bit.test.cpp  yosupo-matrix-rank.test.cpp  (+11 more)
(+39 files in other folders)
