[project]
name = "nichelibrary"
version = "1.1.6"
description = "C++ library for competitive programming"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "competitive-verifier",
    "ruff>=0.15.12",
]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv.sources]
competitive-verifier = { git = "https://github.com/NotLeonian/competitive-verifier", rev = "e3e9b8e6d7cbe2b03334278a9e76b3e8a162d385" }
