[project]
name = "nichelibrary"
version = "1.1.7"
description = "C++ library for competitive programming"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "competitive-verifier",
    "ruff>=0.15.12",
]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv.sources]
competitive-verifier = { git = "https://github.com/NotLeonian/competitive-verifier", rev = "8f6a1c558a35429a8beb9e880a500e3a9369927b" }
